--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: blog DEPLOY CI
 on:
   push:
     branches:
-      - master
+      - main
     paths-ignore:
       - README.md
       - LICENSE
