--- a/.github/workflows/dockerDeploy.yml
+++ b/.github/workflows/dockerDeploy.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-    paths:
+    paths-ignore:
       - README.md
       - LICENSE
 jobs:
@@ -15,23 +15,23 @@ jobs:
         uses: actions/checkout@v2
       # 使用Docker官方制作的action
       # https://github.com/marketplace/actions/build-and-push-docker-images
-      - name: Build and Push Docker Iamge
-        uses: docker/build-push-action@v1
-        with: 
-          registry: ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
-          username: ${{ secrets.ALI_DOCKER_HUB_USN }}
-          password: ${{ secrets.ALI_DOCKER_HUB_PWD }}
-          repository: chasenzh/chasenzh-repository
-          tag_with_sha: true
-          path: '/'
+      # - name: Build and Push Docker Iamge
+      #   uses: docker/build-push-action@v1
+      #   with: 
+      #     registry: ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
+      #     username: ${{ secrets.ALI_DOCKER_HUB_USN }}
+      #     password: ${{ secrets.ALI_DOCKER_HUB_PWD }}
+      #     repository: chasenzh/chasenzh-repository
+      #     tag_with_sha: true
+      #     path: '/'
 
       # 使用Aliyun操作指南提供的命令
-      # - name: Build Docker image
-      #   run: |
-      #     docker build -t locale:tag .
+      - name: Build Docker image
+        run: |
+          docker build -t locale:tag .
           
-      # - name: Push to Ali Docker Repository
-      #   run: |
-      #     docker login -u ${{ secrets.ALI_DOCKER_HUB_USN }} -p ${{ secrets.ALI_DOCKER_HUB_PWD }} ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
-      #     docker tag locale ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/username/repository:tag
-      #     docker push ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/username/repository:tag
+      - name: Push to Ali Docker Repository
+        run: |
+          docker login -u ${{ secrets.ALI_DOCKER_HUB_USN }} -p ${{ secrets.ALI_DOCKER_HUB_PWD }} ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
+          docker tag locale ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/username/repository:tag
+          docker push ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/username/repository:tag
