--- a/.github/workflows/dockerDeploy.yml
+++ b/.github/workflows/dockerDeploy.yml
@@ -43,7 +43,7 @@ jobs:
           port: ${{ secrets.ALI_SERVER_PORT }}
           script: |
            
-            docker login -u ${{ secrets.ALI_DOCKER_HUB_USN }} -p {{ secrets.ALI_DOCKER_HUB_PWD }} ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
+            docker login -u ${{ secrets.ALI_DOCKER_HUB_USN }} -p ${{ secrets.ALI_DOCKER_HUB_PWD }} ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
             
             docker pull ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository
             docker run -d -p 80:80 --name=blog-page ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository
