--- a/.github/workflows/dockerDeploy.yml
+++ b/.github/workflows/dockerDeploy.yml
@@ -15,14 +15,14 @@ jobs:
         uses: actions/checkout@v2
       # 使用Docker官方制作的action
       # https://github.com/marketplace/actions/build-and-push-docker-images
-      - name: Build and Push Docker Iamge
-        uses: docker/build-push-action@v1
-        with: 
-          registry: ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
-          username: ${{ secrets.ALI_DOCKER_HUB_USN }}
-          password: ${{ secrets.ALI_DOCKER_HUB_PWD }}
-          repository: chasenzh/chasenzh-repository
-          tag_with_sha: true
+      # - name: Build and Push Docker Iamge
+      #   uses: docker/build-push-action@v1
+      #   with: 
+      #     registry: ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
+      #     username: ${{ secrets.ALI_DOCKER_HUB_USN }}
+      #     password: ${{ secrets.ALI_DOCKER_HUB_PWD }}
+      #     repository: chasenzh/chasenzh-repository
+      #     tag_with_sha: true
 
       # 使用Aliyun操作指南提供的命令
       # - name: Build Docker image
@@ -44,8 +44,7 @@ jobs:
           script: |
             if [[ -n $(docker ps -q -f "name=^blog-page$") ]];then
               docker stop blog-page
-              docker rm blog-page
-              docker rmi ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository
+              docker container rm blog-page
             else
               echo "blog-page don't exist"
             fi
