--- a/.github/workflows/dockerDeploy.yml
+++ b/.github/workflows/dockerDeploy.yml
@@ -25,15 +25,15 @@ jobs:
       #     tag_with_sha: true
 
       # 使用Aliyun操作指南提供的命令
-      # - name: Build Docker image
-      #   run: |
-      #     docker build -t locale:tag .
+      - name: Build Docker image
+        run: |
+          docker build -t locale:tag .
           
-      # - name: Push to Ali Docker Repository
-      #   run: |
-      #     docker login -u ${{ secrets.ALI_DOCKER_HUB_USN }} -p ${{ secrets.ALI_DOCKER_HUB_PWD }} ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
-      #     docker tag locale ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository:tag
-      #     docker push ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository:tag
+      - name: Push to Ali Docker Repository
+        run: |
+          docker login -u ${{ secrets.ALI_DOCKER_HUB_USN }} -p ${{ secrets.ALI_DOCKER_HUB_PWD }} ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
+          docker tag locale ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository:tag
+          docker push ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository:tag
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
