--- a/.github/workflows/dockerDeploy.yml
+++ b/.github/workflows/dockerDeploy.yml
@@ -38,12 +38,13 @@ jobs:
           password: ${{ secrets.ALI_DOCKER_HUB_PWD }}
           port: ${{ secrets.ALI_SERVER_PORT }}
           script: |
-            if [ "$( docker container inspect -f '{{.State.Running}}' blog-page )" == "true" ]; then
+            if [ "$( docker container inspect -f '{{.State.Running}}' blog-page )" == "true" ]
+            then
               docker stop blog-page
               docker container rm blog-page
             else
               echo "no container blog-page creating...."
-            if
+            fi
             docker login -u ${{ secrets.ALI_DOCKER_HUB_USN }} -p ${{ secrets.ALI_DOCKER_HUB_PWD }} ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
             
             docker pull ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository
