--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/preset-classic": "2.0.0-beta.13",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
+    "disqus-react": "^1.1.3",
     "docusaurus-plugin-sass": "^0.2.1",
     "prism-react-renderer": "^1.2.1",
     "rc-texty": "^0.2.0",
